<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lectures_attended_"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="normal"
                android:inputType="number" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecture_completed"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="normal"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_lectures"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minimum_required"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" >
            </EditText>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:textColor="@android:color/white"
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/button2" />

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton1"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton2"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/button"
                android:textColor="@android:color/white"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="4.56"
                android:gravity="center"
                android:text="Add Timetable For Notifications"
                android:textColor="@android:color/white"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="4.56"
                android:gravity="center"
                android:text="Add Assignments For Notification"
                android:textColor="@android:color/white"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

        </LinearLayout>
         <com.google.ads.AdView android:id="@+id/adViews"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    ads:adUnitId="a1530e0254ae4ab"
    ads:adSize="BANNER"
    ads:loadAdOnCreate="true"/>
    </LinearLayout>

</ScrollView>